--- a/src/content/blog/first-post.mdx
+++ b/src/content/blog/first-post.mdx
@@ -2,23 +2,40 @@
 title: 'NU Manila Tour'
 description: 'A photo blog tour of National University Manila.'
 pubDate: 'September 14, 2023'
-heroImage: '/blog-placeholder-3.jpg'
+heroImage: '/statue.jpg'
 ---
 Hello, we are a group of students who want to share with you the wonders of our university, the National University, and explore their history and significance through this website. With this website, we will show you and know more about our university's special areas that will help you as our university's future student, professor or staff. 
 
+# LRC
+
+https://www.youtube.com/watch?v=OQGwdld7l7A
 
 The LRC (Learning Resource Center) is a place of study where both students and NU staff can concentrate on their learning. There are 2 zones, the Silent Zone, and Collaborative Zone. NU provides resources for research and professional knowledge. This place is located on the 5th floor of the University's Jhocson Memorial Building, but is also accessible through the Main Building via a small bridge. Wi-Fi vouchers are also available so that you can connect and do schoolworks. 
 
+# Bulldogs Exchange
+
+https://www.youtube.com/watch?v=MimrUtgYQ-A
 
 The Bulldogs Exchange, also known as B.E., is conveniently located near Gate 5's parking lot, is your one-stop shop for a wide range of National University merchandise, with a strong focus on clothing. From uniforms of all courses and trendy t-shirts to jerseys and varsity jackets, they offer a diverse selection to suit every style and season. But it's not just clothing; you'll also find accessories like hats and collectibles like pins and keychains. Whether you're a current student or a proud alumni, Bulldogs Exchange is the perfect place to showcase your National University pride in style. 
 
-
+# Jhocson Monument
 The National University unveiled the Don Mariano F. Jhocson statue on October 15, 2021 to commemorate the founder’s 144th birthday and 121st foundation anniversary of the National University. The university’s founder monument is located right in front of the Jhocson Memorial Building. The first statue was gone after the original Main Building, the Law and Commerce Building, the Elementary Building, and the Graduate School Building were all destroyed by fire on January 1, 1998. After three weeks of repair work, the university was able to reopen its doors and use the Mariano F. Jhocson Memorial Building. The College of Dentistry Building, constructed in the 1920s, was the only structure on the NU campus to escape the fire unscathed. The statue was first created after the death of Don Mariano in 1928.
 
+# The Garden
+
+https://www.youtube.com/watch?v=TRuxhwjAfWo
 
 The Garden is a place of relaxation with beautiful scenery, trees, and a beautiful architectural pathway that leads to numerous sites and connections between two buildings. In this particular area, you can spend your time with your friends to have a group activity, relax with your friends, and get some fresh air. This place can be visited through Gate 1 of the University.
 
+# The Chapel
+
+https://www.youtube.com/watch?v=iV5Xk8E69Nc
+
 The San Pedro Calungsod Chapel is a place wherein Catholic students of National University can pray. It is facilitated  by the National University Ministry on Campus. Masses are occasionally held here. It is located on the 2nd floor of the University's Main Building, near the Registrar's Office and the cashier. 
 
-* The Gymnasium is a place where varsity players and athletes practice their games, whether it's basketball, volleyball, badminton, or even chess, due to the court being wide enough for the players. Usually, game try-outs are happening here. It is located on the 8th floor of the Annex Building. 
+# The Gymnasium
+
+https://www.youtube.com/watch?v=MILYbb63hR4
+
+The Gymnasium is a place where varsity players and athletes practice their games, whether it's basketball, volleyball, badminton, or even chess, due to the court being wide enough for the players. Usually, game try-outs are happening here. It is located on the 8th floor of the Annex Building. 
 
