--- a/src/content/blog/first-post.mdx
+++ b/src/content/blog/first-post.mdx
@@ -2,7 +2,7 @@
 title: 'NU Manila Tour'
 description: 'A photo blog tour of National University Manila.'
 pubDate: 'September 14, 2023'
-heroImage: '/statue.jpg'
+heroImage: '/../src/assets/statue.jpg'
 ---
 Hello, we are a group of students who want to share with you the wonders of our university, the National University, and explore their history and significance through this website. With this website, we will show you and know more about our university's special areas that will help you as our university's future student, professor or staff. 
 
