--- a/src/content/blog/webpage-3.mdx
+++ b/src/content/blog/webpage-3.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Our Reflections on the Founder's Legacy'
+title: "Our Reflections on the Founder's Legacy"
 description: 'Videos of each member reflecting on their way of continuing the legacy of Mariano Jhocson and Jose Rizal.'
 pubDate: 'September 30, 2023'
-heroImage: '/IMG_0712.jpg'
+heroImage: '/group_photo.jpg'
 ---
 # Nathan Escaño
 https://youtu.be/IX018hNxr2s?si=zcWD0Jl875ysj2v5
@@ -11,7 +11,6 @@ https://youtu.be/IX018hNxr2s?si=zcWD0Jl875ysj2v5
 https://youtube.com/watch?v=IOmJ20YXN5Q&si=fHRHla1X2PubLVBY
 
 # Lynus Kho
-
 https://youtu.be/45U2qO3B2U8
 
 
