--- a/src/content/blog/webpage-3.mdx
+++ b/src/content/blog/webpage-3.mdx
@@ -1,19 +1,20 @@
 ---
 title: "Our Reflections on the Founder's Legacy"
 description: 'Videos of each member reflecting on their way of continuing the legacy of Mariano Jhocson and Jose Rizal.'
-pubDate: 'September 30, 2023'
+pubDate: 'September 27, 2023'
 heroImage: '/group_photo.jpg'
 ---
-# Nathan Escaño
+### Nathan Escaño
 https://youtu.be/IX018hNxr2s?si=zcWD0Jl875ysj2v5
 
-# John Paul Juan
+### John Paul Juan
 https://youtube.com/watch?v=IOmJ20YXN5Q&si=fHRHla1X2PubLVBY
 
-# Lynus Kho
+### Lynus Kho
 https://youtu.be/45U2qO3B2U8
 
-
+### Christopher Maranan
+https://www.youtube.com/watch?v=yOVZncM39aw
 
 
 
