add jomari and sean

--- a/src/content/blog/webpage-3.mdx
+++ b/src/content/blog/webpage-3.mdx
@@ -16,6 +16,11 @@ https://youtu.be/45U2qO3B2U8
 ### Christopher Maranan
 https://www.youtube.com/watch?v=yOVZncM39aw
 
+### Jomari Ramos
+https://m.youtube.com/watch?v=W2_JwiqM_Bk&pp=QACIAgE%3D&rco=1
+
+### Sean Carreon
+https://youtu.be/W2_JwiqM_Bk
 
 
 
