add cover image for webpage 3

--- a/src/content/blog/webpage6.mdx
+++ b/src/content/blog/webpage6.mdx
@@ -2,6 +2,7 @@
 title: 'Webpage entry #6 - Alumni Reaction Video 2'
 description: 'A compilation of reaction videos about the story of Danny Idelfonso, a prominent alumnus of NU.'
 pubDate: 'October 28, 2023'
+heroImage: '/dannyi.png'
 ---
 ### Sean Carreon
 https://youtu.be/NsrIVu5D29Y?si=JbXnXLSvLnaDpbHv
