add lynus and christopher video

--- a/src/content/blog/webpage6.mdx
+++ b/src/content/blog/webpage6.mdx
@@ -13,3 +13,8 @@ https://youtu.be/RwBewM86AdE?si=nsWNJ3-ccvevYmXm
 ### John Paul Juan
 https://youtu.be/EH3920avJDU?si=_VU9EaYz87sRwWma
 
+### Lynus Kho
+https://youtu.be/Op6nyj2hqQY
+
+### Christopher Maranan
+https://youtu.be/3MMVULW1AVA?si=onm4vU3OK0FZEzMP
